// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty array shows no exposure events 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-81 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-83"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-82"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-82"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-97"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-102"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    <span
                      class="makeStyles-tooltipped-101"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-100"
                  >
                    <span
                      class="makeStyles-tooltipped-101"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-103"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-105"
                  >
                    All 
                    locales
                     included
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-103"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-105"
                  >
                    All 
                    countries
                     included
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-108"
            >
              <span
                class="makeStyles-monospace-109"
              >
                No exposure events defined
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Shows exposure events 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-81 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-83"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-82"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-82"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-84"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-87"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-89"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-87"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-87"
                  >
                    <span
                      class="makeStyles-tooltipped-88"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-87"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-87"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-87"
                  >
                    <span
                      class="makeStyles-tooltipped-88"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-90"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-92"
                  >
                    All 
                    locales
                     included
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-90"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-92"
                  >
                    All 
                    countries
                     included
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-95"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-96 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-94"
                  title="test"
                >
                  test
                </span>
                <span
                  class="makeStyles-entry-93"
                >
                  prop1
                  : 
                  value1
                </span>
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`null shows no exposure events 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-81 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-83"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-82"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-82"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-110"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-113"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-115"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-113"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-113"
                  >
                    <span
                      class="makeStyles-tooltipped-114"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-113"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-113"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-113"
                  >
                    <span
                      class="makeStyles-tooltipped-114"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-116"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-118"
                  >
                    All 
                    locales
                     included
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-116"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-118"
                  >
                    All 
                    countries
                     included
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-121"
            >
              <span
                class="makeStyles-monospace-122"
              >
                No exposure events defined
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected with 5 variations 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-17 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-19"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-18"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-18"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-20"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-25"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    20
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    <span
                      class="makeStyles-tooltipped-24"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    20
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    <span
                      class="makeStyles-tooltipped-24"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    <span>
                      treatment_2
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    20
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    <span
                      class="makeStyles-tooltipped-24"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    <span>
                      treatment_3
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    20
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    <span
                      class="makeStyles-tooltipped-24"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    <span>
                      treatment_4
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    20
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-23"
                  >
                    <span
                      class="makeStyles-tooltipped-24"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-26"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-28"
                  >
                    All 
                    locales
                     included
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-26"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-28"
                  >
                    All 
                    countries
                     included
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-31"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-32 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-30"
                  title="event_name"
                >
                  event_name
                </span>
                <span
                  class="makeStyles-entry-29"
                >
                  additionalProp1
                  : 
                  prop1Value
                </span>
                <span
                  class="makeStyles-entry-29"
                >
                  additionalProp2
                  : 
                  prop2Value
                </span>
                <span
                  class="makeStyles-entry-29"
                >
                  additionalProp3
                  : 
                  prop3Value
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-monospace-32 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-30"
                  title="event_without_props"
                >
                  event_without_props
                </span>
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected with all segments resolvable 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-65 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-67"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-66"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-66"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-68"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-71"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-73"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-71"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-71"
                  >
                    <span
                      class="makeStyles-tooltipped-72"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-71"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-71"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-71"
                  >
                    <span
                      class="makeStyles-tooltipped-72"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-74"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-76"
                  >
                    segment_1
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-76"
                  >
                    segment_3
                     
                    <span
                      class="makeStyles-root-73"
                    >
                      excluded
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-76"
                  >
                    segment_5
                     
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-74"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-76"
                  >
                    segment_2
                     
                    <span
                      class="makeStyles-root-73"
                    >
                      excluded
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-76"
                  >
                    segment_4
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-79"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-80 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-78"
                  title="event_name"
                >
                  event_name
                </span>
                <span
                  class="makeStyles-entry-77"
                >
                  additionalProp1
                  : 
                  prop1Value
                </span>
                <span
                  class="makeStyles-entry-77"
                >
                  additionalProp2
                  : 
                  prop2Value
                </span>
                <span
                  class="makeStyles-entry-77"
                >
                  additionalProp3
                  : 
                  prop3Value
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-monospace-80 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-78"
                  title="event_without_props"
                >
                  event_without_props
                </span>
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected with existing users allowed 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-49 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-51"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-50"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-50"
            >
              All users (new + existing + anonymous)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-52"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-55"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-57"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-55"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-55"
                  >
                    <span
                      class="makeStyles-tooltipped-56"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-55"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-55"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-55"
                  >
                    <span
                      class="makeStyles-tooltipped-56"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-58"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-60"
                  >
                    All 
                    locales
                     included
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-58"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-60"
                  >
                    All 
                    countries
                     included
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-63"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-64 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-62"
                  title="event_name"
                >
                  event_name
                </span>
                <span
                  class="makeStyles-entry-61"
                >
                  additionalProp1
                  : 
                  prop1Value
                </span>
                <span
                  class="makeStyles-entry-61"
                >
                  additionalProp2
                  : 
                  prop2Value
                </span>
                <span
                  class="makeStyles-entry-61"
                >
                  additionalProp3
                  : 
                  prop3Value
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-monospace-64 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-62"
                  title="event_without_props"
                >
                  event_without_props
                </span>
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected with no exclusion groups 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-33 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-35"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-34"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-34"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-36"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-39"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-41"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-39"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-39"
                  >
                    <span
                      class="makeStyles-tooltipped-40"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-39"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-39"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-39"
                  >
                    <span
                      class="makeStyles-tooltipped-40"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-42"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-44"
                  >
                    All 
                    locales
                     included
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-42"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-44"
                  >
                    All 
                    countries
                     included
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-47"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-48 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-46"
                  title="event_name"
                >
                  event_name
                </span>
                <span
                  class="makeStyles-entry-45"
                >
                  additionalProp1
                  : 
                  prop1Value
                </span>
                <span
                  class="makeStyles-entry-45"
                >
                  additionalProp2
                  : 
                  prop2Value
                </span>
                <span
                  class="makeStyles-entry-45"
                >
                  additionalProp3
                  : 
                  prop3Value
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-monospace-48 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-46"
                  title="event_without_props"
                >
                  event_without_props
                </span>
              </p>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected with no segment assignments 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-1 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-3"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-2"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-2"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-4"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-7"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-9"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-7"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-7"
                  >
                    <span
                      class="makeStyles-tooltipped-8"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-7"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-7"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-7"
                  >
                    <span
                      class="makeStyles-tooltipped-8"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-10"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-12"
                  >
                    All 
                    locales
                     included
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-10"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-12"
                  >
                    All 
                    countries
                     included
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-15"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-16 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-14"
                  title="event_name"
                >
                  event_name
                </span>
                <span
                  class="makeStyles-entry-13"
                >
                  additionalProp1
                  : 
                  prop1Value
                </span>
                <span
                  class="makeStyles-entry-13"
                >
                  additionalProp2
                  : 
                  prop2Value
                </span>
                <span
                  class="makeStyles-entry-13"
                >
                  additionalProp3
                  : 
                  prop3Value
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-monospace-16 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-14"
                  title="event_without_props"
                >
                  event_without_props
                </span>
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
